<resources>
    <string name="app_name">Eureka18</string>
    <string name="title_activity_unique_id_generator">UniqueIdGenerator</string>
    <string name="user_name">User Name</string>
    <string name="mobile_no">Mobile no</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sign_in">Sign up</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="sign_up">sign up</string>
    <string name="mobileno">MobileNO</string>
    <string name="otp">OTP</string>
    <string name="send_otp">Send Otp</string>
    <string name="icon">icon</string>
    <string name="enter_your_aadhar_number">Enter Your Aadhar Number</string>
    <string name="aadhar_number">Aadhar Number</string>
    <string name="okay">OKAY</string>

</resources>
