<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

           <LinearLayout

               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginRight="25dp"
               android:layout_marginLeft="25dp"
               android:orientation="vertical"
               android:layout_gravity="center">
               <EditText
                   android:id="@+id/activity_signin_UserName"
                   style="@style/edittext"
                   android:hint="@string/user_name"


                   />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_weight="2"
                        android:layout_marginTop="10dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/activity_signin_FirstName"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            style="@style/edittext"
                            android:layout_height="wrap_content"
                            android:hint="@string/first_name"/>
                        <EditText
                            android:id="@+id/activity_signin_LastName"
                            android:layout_width="0dp"
                            style="@style/edittext"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:hint="@string/last_name"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <EditText
                            android:id="@+id/activity_signin_Mobileno"
                            style="@style/edittext"
                            android:hint="@string/mobile_no"
                            android:inputType="number"/>
                        <EditText
                            android:id="@+id/activity_signin_Email"
                            style="@style/edittext"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"/>



                    </LinearLayout>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_weight="2"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="10dp"
                   android:orientation="horizontal">
                   <EditText
                       android:id="@+id/activity_signin_Password"
                       android:layout_width="0dp"
                       android:layout_weight="1"
                       android:layout_height="wrap_content"
                       android:hint="@string/password"
                       tools:ignore="TextFields"
                       style="@style/edittext"
                       android:inputType="textPassword"/>
                   <EditText

                       android:layout_width="0dp"
                       android:layout_weight="1"
                       style="@style/edittext"
                       android:layout_height="wrap_content"
                       android:hint="@string/confirm_password"
                       android:inputType="textPassword"
                       />
               </LinearLayout>
               <Button
                   android:id="@+id/activity_signinButton"
                   android:layout_marginTop="10dp"
                   android:background="@drawable/buttonstyle1"
                   android:clickable="true"
                   style="@style/button"
                   android:text="@string/sign_in"/>
               <ProgressBar
                   android:id="@+id/ProgressBar"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"

                   android:visibility="gone"/>
           </LinearLayout>

</ScrollView>