<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  >

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="400dp"
        >





        <EditText

       android:id="@+id/Login_UserName"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:inputType="textEmailAddress"
       android:hint="@string/user_name"

       />

    <EditText
        android:id="@+id/Login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_below="@id/Login_UserName"

        />




        <Button
            android:id="@+id/LoginButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Login_password"
           android:text="@string/login" />
        <Button
            android:id="@+id/SignInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/LoginButton"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up"
           />




        <ProgressBar
            android:id="@+id/ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/SignInButton"
            android:visibility="gone"/>

    </RelativeLayout>

</ScrollView>